welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: ':' expected but '.' found.
def ligne1Fleur(c.Color){
                 ^FlowerPot:31: error: identifier expected but '}' found.
}
^